--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.0",
     "tsx": "^4.7.0"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
