--- a/env.example
+++ b/env.example
@@ -1,13 +1,20 @@
 # Database
-DATABASE_URL="postgresql://user:password@localhost:5432/dom_pivovara?schema=public"
-DIRECT_URL="postgresql://user:password@localhost:5432/dom_pivovara?schema=public"
+# For local PostgreSQL:
+# DATABASE_URL="postgresql://user:password@localhost:5432/dom_pivovara?schema=public"
+# DIRECT_URL="postgresql://user:password@localhost:5432/dom_pivovara?schema=public"
+
+# For Neon PostgreSQL (Cloud):
+# Pooled connection - для приложения (с -pooler в хосте)
+DATABASE_URL="postgresql://user:password@ep-xxxxx-pooler.us-east-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
+# Direct connection - для миграций Prisma (без -pooler)
+DIRECT_URL="postgresql://user:password@ep-xxxxx.us-east-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
 
 # JWT
 JWT_SECRET="your-jwt-secret-min-32-characters-change-in-production"
 JWT_REFRESH_SECRET="your-jwt-refresh-secret-min-32-characters-change-in-production"
 
 # Email (optional, can be configured in admin panel)
-SMTP_HOST="smtp.gmail.com"
+SMTP_HOST="smt p.gmail.com"
 SMTP_PORT=587
 SMTP_USER="your-email@gmail.com"
 SMTP_PASSWORD="your-app-password"
