--- a/env.example
+++ b/env.example
@@ -35,3 +35,7 @@ ADMIN_PASSWORD="admin123"
 
 # Node Environment
 NODE_ENV="development"
+
+# reCAPTCHA
+NEXT_PUBLIC_RECAPTCHA_SITE_KEY="your-recaptcha-site-key"
+RECAPTCHA_SECRET_KEY="your-recaptcha-secret-key"
