--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prisma": "^5.19.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.51.0",
     "sass": "^1.77.0",
     "sharp": "^0.33.0",
